# JSPTH

./: Configuration.py  DESCRIPTION.md  Description.md  LICENSE  README.md  all_files.py  app.go  app.js  app.py  configuration.json  example_of_EE.py  example_of_crypto.py  manipulation.py  package-lock.json  setup.py
C#/: README.md  lib.cs
C#/JSCSH/: fullLibrary.cs  mainClases.cs
C++/: README.md
Description folder/: README
Go/: README.md  app.go
Go/JSGo/: JSGo.go  convertors.go
JSPTH/: ClasesCode.py  Crypto.py  README.md  __init__.py  all_files.py  pyproject.toml  setup.py
JSPTH/BeckEnd/: server.py  structure.py
JSPTH/Beckend/: MainFile.py  server.py
JSPTH/Crypto/: Crypto.py  aes_utils.py  hashing.py  key_derivation.py  rsa_utils.py
JSPTH/Math/: Algebra.py  (+6 more)
JavaScript/: app.js
Phyton/: app.py  example_of_crypto.py
Python/: all_files.py  app.py  configuration.json
Python/JSPTH/: ClasesCode.py  README.md  __init__.py  pyproject.toml
Python/JSPTH/BeckEnd/: celery_config.py  database_sesion.py  email_tasks.py  enhanced_session_logging.py  framework.py  geolocation_logging_middleware.py  geolocation_middleware.py  geolocation_trends.py  geolocation_utils.py  http.py  logining_vonfigs.py  middleware.py  redis_session.py  redis_session_with_metadata.py  securecoockies.py  server.py  session.py  session_with_celery.py
Python/JSPTH/Crypto/: __init__.py  crypto.py  signature.py
Python/JSPTH/DataAnalytics/: __init__.py  main.py
Python/JSPTH/Math/: Algebra.py  Geometry.py  MainMath.py  Trigonometry.py
Python/JSPTH/Turtle/: Triangle.py  tropezia.py
(+81 files in other folders)
